# tokenizer

./: .gitmodules  CMakeLists.txt  README.md
include/tokenizer/: term_tokenizer.hpp
src/: term_tokenizer.cpp
test/: CMakeLists.txt  test_term_tokenizer.cpp
